--- a/01/cart.html
+++ b/01/cart.html
@@ -3,11 +3,11 @@
   <head>
     <title>RequireJS</title>
   </head>
-  <body data-require="home">
+  <body data-require="cart">
     <h1>/#!/</h1>
 
     <ul>
-      <li><a href="cart.html">Cart</a></li>
+      <li><a href="index.html">Home</a></li>
     </ul>
 
     <script data-main="assets/js/main" src="../vendor/requirejs/require.js"></script>
